[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "yxr-atcoder-core"
description = "Simple Atcoder core api"
authors = [
  { name="YeXiaoRain", email="yexiaorain@gmail.com" }
]
dependencies = [
  "requests >= 2",
  "beautifulsoup4 >= 4",
  "lxml >= 4",
  "types-beautifulsoup4",
  "toml",
  "yapf >= 0.32",
  "dataclasses-json",
  "sphinx >= 5",
  "furo",
  "myst-parser",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
keywords = ["atcoder", "api", "yxr"]
license = { file="LICENSE" }
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/CroMarmot/yxr-atcoder-core"
"Bug Tracker" = "https://github.com/CroMarmot/yxr-atcoder-core/issues"

[project.optional-dependencies]
test = [
  'build',
  'coverage >= 6',
  'pytest >= 7',
  'mypy',
]

[tool.hatch.build]
ignore-vcs = true
include = [
  "ac_core",
]
exclude = [
  "tests",
  "docs",
]

[tool.hatch.version]
path = "ac_core/__init__.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
indent_width = 2

[tool.mypy]
strict_optional = false
